# app/src/generated-api/apis/ServiceOrdersApi.ts
@@ -1,0 +1,146 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Travel Manager - API de Gestão de recursos de transporte rodoviário
+ * Especificação modular da API de back-end. Todos os schemas e paths estão em ficheiros separados (specs/). Use um agregador OpenAPI (como o ReDoc ou Swagger UI) para visualizar a documentação completa.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: ferdxavier@gmail.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  CreateServiceOrdersRequest,
+  ServiceOrders,
+  Status,
+} from '../models/index';
+import {
+    CreateServiceOrdersRequestFromJSON,
+    CreateServiceOrdersRequestToJSON,
+    ServiceOrdersFromJSON,
+    ServiceOrdersToJSON,
+    StatusFromJSON,
+    StatusToJSON,
+} from '../models/index';
+
+export interface CreateServiceOrderRequest {
+    createServiceOrdersRequest: CreateServiceOrdersRequest;
+}
+
+export interface ListServiceOrdersRequest {
+    status?: Status;
+    vehicleId?: string;
+    limit?: number;
+}
+
+/**
+ * 
+ */
+export class ServiceOrdersApi extends runtime.BaseAPI {
+
+    /**
+     * Adiciona uma nova ordem de serviço para um veículo específico.
+     * Cria uma nova ordem de serviço.
+     */
+    async createServiceOrderRaw(requestParameters: CreateServiceOrderRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ServiceOrders>> {
+        if (requestParameters['createServiceOrdersRequest'] == null) {
+            throw new runtime.RequiredError(
+                'createServiceOrdersRequest',
+                'Required parameter "createServiceOrdersRequest" was null or undefined when calling createServiceOrder().'
+            );
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        headerParameters['Content-Type'] = 'application/json';
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("BearerAuth", ["kjshdfahskfhakjsdfhkjasdhfkadsh"]);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+
+        let urlPath = `/serviceOrders`;
+
+        const response = await this.request({
+            path: urlPath,
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+            body: CreateServiceOrdersRequestToJSON(requestParameters['createServiceOrdersRequest']),
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => ServiceOrdersFromJSON(jsonValue));
+    }
+
+    /**
+     * Adiciona uma nova ordem de serviço para um veículo específico.
+     * Cria uma nova ordem de serviço.
+     */
+    async createServiceOrder(requestParameters: CreateServiceOrderRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ServiceOrders> {
+        const response = await this.createServiceOrderRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
+     * Recupera uma lista paginada de todas as ordens de serviço, com opções de filtragem por status ou veículo.
+     * Lista todas as ordens de serviço.
+     */
+    async listServiceOrdersRaw(requestParameters: ListServiceOrdersRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<ServiceOrders>>> {
+        const queryParameters: any = {};
+
+        if (requestParameters['status'] != null) {
+            queryParameters['status'] = requestParameters['status'];
+        }
+
+        if (requestParameters['vehicleId'] != null) {
+            queryParameters['vehicleId'] = requestParameters['vehicleId'];
+        }
+
+        if (requestParameters['limit'] != null) {
+            queryParameters['limit'] = requestParameters['limit'];
+        }
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("BearerAuth", ["kjshdfahskfhakjsdfhkjasdhfkadsh"]);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+
+        let urlPath = `/serviceOrders`;
+
+        const response = await this.request({
+            path: urlPath,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(ServiceOrdersFromJSON));
+    }
+
+    /**
+     * Recupera uma lista paginada de todas as ordens de serviço, com opções de filtragem por status ou veículo.
+     * Lista todas as ordens de serviço.
+     */
+    async listServiceOrders(requestParameters: ListServiceOrdersRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<ServiceOrders>> {
+        const response = await this.listServiceOrdersRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+}
