# app/src/generated-api/models/reportReason/CreateDriverReportRequest.ts
@@ -1,0 +1,135 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Travel Manager - API de Gestão de recursos de transporte rodoviário
+ * Especificação modular da API de back-end. Todos os schemas e paths estão em ficheiros separados (specs/). Use um agregador OpenAPI (como o ReDoc ou Swagger UI) para visualizar a documentação completa.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: ferdxavier@gmail.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../../runtime';
+import type { DriverReportReason } from './DriverReportReason';
+import {
+    DriverReportReasonFromJSON,
+    DriverReportReasonFromJSONTyped,
+    DriverReportReasonToJSON,
+    DriverReportReasonToJSONTyped,
+} from './DriverReportReason';
+
+/**
+ * Dados coletados de motoristas (integrantes da empresa) via link público. Mais granular.
+ * @export
+ * @interface CreateDriverReportRequest
+ */
+export interface CreateDriverReportRequest {
+    /**
+     * ID do veículo (obtido via QR Code).
+     * @type {string}
+     * @memberof CreateDriverReportRequest
+     */
+    vehicleId: string;
+    /**
+     * ID do usuário do motorista. (Backend pode ignorar para triagem, mas é importante para auditoria).
+     * @type {string}
+     * @memberof CreateDriverReportRequest
+     */
+    userId: string;
+    /**
+     * Breve descrição do problema (máx. 250 caracteres).
+     * @type {string}
+     * @memberof CreateDriverReportRequest
+     */
+    description: string;
+    /**
+     * 
+     * @type {DriverReportReason}
+     * @memberof CreateDriverReportRequest
+     */
+    reportReason?: DriverReportReason;
+    /**
+     * Leitura atual do hodômetro do veículo (em km).
+     * @type {number}
+     * @memberof CreateDriverReportRequest
+     */
+    odometerReading: number;
+    /**
+     * Coordenadas GPS no momento do relato (ex: 'lat: -23.55, lon: -46.63').
+     * @type {string}
+     * @memberof CreateDriverReportRequest
+     */
+    locationCoordinates?: string | null;
+    /**
+     * Imagem opcional do problema em Base64.
+     * @type {string}
+     * @memberof CreateDriverReportRequest
+     */
+    imageBase64?: string | null;
+    /**
+     * Vídeo curto opcional do problema em Base64 (máx. 10MB).
+     * @type {string}
+     * @memberof CreateDriverReportRequest
+     */
+    videoBase64?: string | null;
+}
+
+
+
+/**
+ * Check if a given object implements the CreateDriverReportRequest interface.
+ */
+export function instanceOfCreateDriverReportRequest(value: object): value is CreateDriverReportRequest {
+    if (!('vehicleId' in value) || value['vehicleId'] === undefined) return false;
+    if (!('userId' in value) || value['userId'] === undefined) return false;
+    if (!('description' in value) || value['description'] === undefined) return false;
+    if (!('odometerReading' in value) || value['odometerReading'] === undefined) return false;
+    return true;
+}
+
+export function CreateDriverReportRequestFromJSON(json: any): CreateDriverReportRequest {
+    return CreateDriverReportRequestFromJSONTyped(json, false);
+}
+
+export function CreateDriverReportRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateDriverReportRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'vehicleId': json['vehicleId'],
+        'userId': json['userId'],
+        'description': json['description'],
+        'reportReason': json['reportReason'] == null ? undefined : DriverReportReasonFromJSON(json['reportReason']),
+        'odometerReading': json['odometerReading'],
+        'locationCoordinates': json['locationCoordinates'] == null ? undefined : json['locationCoordinates'],
+        'imageBase64': json['imageBase64'] == null ? undefined : json['imageBase64'],
+        'videoBase64': json['videoBase64'] == null ? undefined : json['videoBase64'],
+    };
+}
+
+export function CreateDriverReportRequestToJSON(json: any): CreateDriverReportRequest {
+    return CreateDriverReportRequestToJSONTyped(json, false);
+}
+
+export function CreateDriverReportRequestToJSONTyped(value?: CreateDriverReportRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'vehicleId': value['vehicleId'],
+        'userId': value['userId'],
+        'description': value['description'],
+        'reportReason': DriverReportReasonToJSON(value['reportReason']),
+        'odometerReading': value['odometerReading'],
+        'locationCoordinates': value['locationCoordinates'],
+        'imageBase64': value['imageBase64'],
+        'videoBase64': value['videoBase64'],
+    };
+}
+
