# app/src/generated-api/models/reportReason/DriverReportReason.ts
@@ -1,0 +1,59 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Travel Manager - API de Gestão de recursos de transporte rodoviário
+ * Especificação modular da API de back-end. Todos os schemas e paths estão em ficheiros separados (specs/). Use um agregador OpenAPI (como o ReDoc ou Swagger UI) para visualizar a documentação completa.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: ferdxavier@gmail.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+/**
+ * Motivo granular do relato fornecido pelo motorista.
+ * @export
+ */
+export const DriverReportReason = {
+    DashboardLightCheckEngine: 'dashboard_light_check_engine',
+    SuspensionNoise: 'suspension_noise',
+    LowTirePressure: 'low_tire_pressure',
+    FluidLeak: 'fluid_leak',
+    BrakeSystemNoise: 'brake_system_noise',
+    ElectricFailureAc: 'electric_failure_ac',
+    BodyworkDamage: 'bodywork_damage',
+    InteriorDamage: 'interior_damage'
+} as const;
+export type DriverReportReason = typeof DriverReportReason[keyof typeof DriverReportReason];
+
+
+export function instanceOfDriverReportReason(value: any): boolean {
+    for (const key in DriverReportReason) {
+        if (Object.prototype.hasOwnProperty.call(DriverReportReason, key)) {
+            if (DriverReportReason[key as keyof typeof DriverReportReason] === value) {
+                return true;
+            }
+        }
+    }
+    return false;
+}
+
+export function DriverReportReasonFromJSON(json: any): DriverReportReason {
+    return DriverReportReasonFromJSONTyped(json, false);
+}
+
+export function DriverReportReasonFromJSONTyped(json: any, ignoreDiscriminator: boolean): DriverReportReason {
+    return json as DriverReportReason;
+}
+
+export function DriverReportReasonToJSON(value?: DriverReportReason | null): any {
+    return value as any;
+}
+
+export function DriverReportReasonToJSONTyped(value: any, ignoreDiscriminator: boolean): DriverReportReason {
+    return value as DriverReportReason;
+}
+
